--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,24 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+.idea
+.SQL
+/SQL
+.DataBase
+.lib
+.out
+.Data
+.target
+/target
+*.class
+*.info
+*.jar
+*.txt
+*.log
+*.patch
+*.log*
+*.docx
+*.csv
+*.xls
+*.xlsx
+*.png
 *.iml
-*.ipr
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
+*.jpg
+/GITHub_Stratagy.iml
