--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
       <artifactId>log4j-api</artifactId>
       <version>2.19.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.26</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
