--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,5 +1,5 @@
-source.file=specbook.xls
-output.file=output.xls
-sheet=sheet
+source.file=specbook.xlsx
+output.file=Aline_output.xls
+sheet=Aline
 target.file=123.txt
 result.file=result
