--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
       <artifactId>spring-context</artifactId>
       <version>5.3.20</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>5.3.20</version>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
