--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,20 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <spring-framework.version>5.3.20</spring-framework.version>
+    <log4j.version>2.20.0</log4j.version>
   </properties>
   <dependencies>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>5.3.20</version>
+      <version>${spring-framework.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>5.3.20</version>
+      <version>${spring-framework.version}</version>
     </dependency>
 
     <dependency>
@@ -42,7 +43,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>5.3.3</version>
+      <version>${spring-framework.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -66,12 +67,12 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <version>2.19.0</version>
+      <version>${log4j.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-      <version>2.19.0</version>
+      <version>${log4j.version}</version>
     </dependency>
 
     <dependency>
@@ -82,7 +83,6 @@
     </dependency>
 
   </dependencies>
-
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
@@ -143,5 +143,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
